--- a/common/spring_security/pom.xml
+++ b/common/spring_security/pom.xml
@@ -9,11 +9,20 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common_utils</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>spring_security</artifactId>
 
     <dependencies>
-        <!-- JWT-->
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>common_utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <!-- Spring Security依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
