--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -3,21 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>common</artifactId>
+        <artifactId>railway_parent</artifactId>
         <groupId>com.example</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common_utils</artifactId>
+    <artifactId>infrastructure</artifactId>
     <packaging>pom</packaging>
-
-    <dependencies>
-        <!-- JWT-->
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>api_gateway</module>
+    </modules>
 
 </project>
