--- a/service/pom.xml
+++ b/service/pom.xml
@@ -13,6 +13,12 @@
     <packaging>pom</packaging>
     <modules>
         <module>service_rly</module>
+        <module>service_acl</module>
+        <module>service_oss</module>
+        <module>service_order</module>
+        <module>service_msm</module>
+        <module>service_statistics</module>
+        <module>service_ucenter</module>
     </modules>
 
     <dependencies>
@@ -20,6 +26,26 @@
             <groupId>com.example</groupId>
             <artifactId>service_base</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+        </dependency>
+        <!--hystrix依赖，主要是用  @HystrixCommand -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+        <!--服务注册-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!--服务调用-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
         <dependency>
